--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -10,14 +10,17 @@
       Please try again.
     </p>
   {% else %}
-    <p>Please, use the following form to log-in</p>
+    <p>Please, use the following form to log-in.If you don't have an account
+    <a href="{% url 'register' %}">register here</a>.</p>
+    </p>
   {% endif %}
   <div class="login-form">
     <form action="{% url 'login' %}" method="post">
       {{ form.as_p }}
       {% csrf_token %}
       <input type="hidden" name="next" value="{{ next }}"/>
-      <p><input type="submit" value="Log-in"></p>
+      <p><input type="submit" value="Login"></p>
     </form>
+    <p><a href="{% url 'password_reset' %}">Forgotten your password</a></p>
   </div>
 {% endblock %}
