added google auth

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -29,6 +29,19 @@
         <a href='{% url "login" %}'>Login</a>
       {% endif %}
     </span>
+    </div>
+
+  {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+        <li class="{{ message.tags }}">
+        {{ message|safe }}
+        <a href="#" class="close">x</a>
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}  
+  
   </div>
   <div id="content">
     {% block content %}{% endblock %}
