--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -4,5 +4,6 @@
 
 {% block content %}
   <h1>Dashboard</h1>
-  <p>Welcome to your dashboard</p>
+  <p>Welcome to your dashboard {{ request.user.get_username }}.</p>
+  <p> You can <a href="{% url 'edit' %}">edit your profile</a> or <a href="{% url 'password_change' %}">change your password</a>.</p>
 {% endblock %}
