--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -10,8 +10,9 @@
       Please try again.
     </p>
   {% else %}
-    <p>Please, use the following form to log-in.If you don't have an account
-    <a href="{% url 'register' %}">register here</a>.</p>
+    <p>Please, use the following form to log-in.</p>
+    <p>If you don't have an account
+    <a href="{% url 'register' %}">register here</a>.
     </p>
   {% endif %}
   <div class="login-form">
@@ -21,6 +22,13 @@
       <input type="hidden" name="next" value="{{ next }}"/>
       <p><input type="submit" value="Login"></p>
     </form>
-    <p><a href="{% url 'password_reset' %}">Forgotten your password</a></p>
+    <p><a href="{% url 'password_reset' %}">Forgotten your password?</a></p>
+  </div>
+  <div class="social">
+    <ul>
+      <li class="google">
+        <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+      </li>
+    </ul>
   </div>
 {% endblock %}
